# ChangeTrackerPy

./: CMakeLists.txt  ChangeTracker.py
ChangeTracker/: CMakeLists.txt  ChangeTracker.py
ChangeTracker/ChangeTrackerWizard/: ChangeTrackerAnalyzeROIStep.py  ChangeTrackerDefineROIStep.py  ChangeTrackerRegistrationStep.py  ChangeTrackerReportROIStep.py  ChangeTrackerSegmentROIStep.py  ChangeTrackerSelectScansStep.py  ChangeTrackerStep.py  Helper.py  __init__.py
ChangeTrackerMetrics/: CMakeLists.txt
ChangeTrackerMetrics/DemonsRegistrationSegmentationMetric/: CMakeLists.txt  ChangeTrackerDemonsRegistrationSegmentationMetric.cxx  ChangeTrackerDemonsRegistrationSegmentationMetric.xml
ChangeTrackerMetrics/IntensityDifferenceMetric/: ChangeTrackerIntensityDifferenceMetric.cxx  ChangeTrackerIntensityDifferenceMetric.xml
ChangeTrackerMetrics/SurfaceTrackingMetric/: ChangeTrackerSurfaceTrackingMetric.cxx  ChangeTrackerSurfaceTrackingMetric.xml
ChangeTrackerWizard/: CMakeLists.txt  ChangeTrackerAnalyzeROIStep.py  ChangeTrackerDefineROIStep.py  ChangeTrackerRegistrationStep.py  ChangeTrackerReportROIStep.py  ChangeTrackerSegmentROIStep.py  ChangeTrackerSelectScansStep.py  ChangeTrackerStep.py  Helper.py  __init__.py
Metrics/: CMakeLists.txt
Metrics/DemonsJacobian/: CMakeLists.txt
Metrics/DemonsSegmentation/: CMakeLists.txt  DemonsSegmentationMetric.cxx  DemonsSegmentationMetric.xml
Metrics/DemonsSegmentation/Testing/: CMakeLists.txt
Metrics/IntensityDifference/: CMakeLists.txt  IntensityDifferenceMetric.cxx  IntensityDifferenceMetric.xml
Metrics/IntensityDifference/Testing/: CMakeLists.txt
Metrics/SurfaceTracking/: CMakeLists.txt
Testing/Python/: CMakeLists.txt  ChangeTrackerSelfTest.py
Wizard/: CMakeLists.txt  ChangeTrackerAnalyzeROIStep.py  ChangeTrackerDefineROIStep.py  ChangeTrackerRegistrationStep.py  ChangeTrackerReportROIStep.py  ChangeTrackerSegmentROIStep.py  ChangeTrackerSelectScansStep.py  ChangeTrackerStep.py  Helper.py
